<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dzero">00</string>
    <string name="dot">.</string>

    <string name="clear">AC</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">÷</string>
    <string name="multi">×</string>
    <string name="exponent">^</string>
    <string name="bracket">( )</string>
    <string name="equal">=</string>
    <string name="backspace"></string>
    <string name="percent">%</string>
    <string name="pi">π</string>
    <string name="root">√</string>
    <string name="display"></string>

</resources>