<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:rowCount="3"
    app:columnCount="1"
    tools:context=".MainActivity"
    app:orientation="vertical">

    <TextView
        android:id="@+id/display1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="right"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:text=""
        android:textColor="@color/grey"
        android:textSize="32dp"
        app:layout_column="0"
        app:layout_row="0" />

    <TextView
        android:id="@+id/display2"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:gravity="right"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="80dp"
        app:layout_column="0"
        app:layout_row="1" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="70dp"
        app:columnCount="4"
        app:rowCount="6">

        <Button
            android:id="@+id/root"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/root"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/pi"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/pi"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/percent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageButton
            android:id="@+id/backspace"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/backspace"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="0"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/red"
            android:text="@string/clear"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/exponent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/exponent"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/bracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/bracket"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/multi"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/multi"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/seven"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/eight"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/nine"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/divide"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/four"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/five"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/six"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/minus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/one"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/two"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/three"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/plus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/zero"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/dot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/equal"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/teal_700"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="5" />

        <Button
            android:id="@+id/dzero"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/circle"
            android:textColor="@color/white"
            android:text="@string/dzero"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="5" />

    </androidx.gridlayout.widget.GridLayout>


</androidx.gridlayout.widget.GridLayout>